# rustbom

./: .gitignore  Cargo.toml  README.md  merged_bom.xlsx
boms/: bom.csv  bom.xlsx  bom0.xlsx  bom_merge.csv  bom_merge.xlsx  bomx.xlsx  m.csv  merge.csv  test.xlsx  test0.xlsx  test1.xlsx  test2.xlsx  uno.csv
src/: bom.rs  lib.rs  main.rs  outjob.rs  utils.rs
src/items/: mod.rs
src/lib/: bom.rs  item.rs  load.rs  mod.rs  outjob.rs  utils.rs
src/mergelib/: bom.rs  utils.rs
src/tests/: merge.rs
templates/: index.html
tests/: merge.rs
tests/data/: bom_check1.csv  bom_test1.csv  test0.check  test0.csv  test1.check  test1.csv  test2.check  test2.csv  test3.check  test3.csv  test4.check
