[package]
name = "mergebom-web"
version = "0.1.0"
edition = "2021"
authors = ["Daniele Basile <asterix24@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
csv = "1.1"
axum = { version = "0.5", features = ["multipart"] }
ajars_axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.10"
regex = "1"
lazy_static = "1.2"
calamine = "0.18"
anyhow = "1.0"
strum = "0.24.0"
strum_macros = "0.24.0"
glob = "0.3.0" 


