[package]
name = "mergebom-web"
version = "0.1.0"
edition = "2021"
authors = ["Daniele Basile <asterix24@gmail.com>"]

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
futures = "0.3"
csv = "1.1"
axum = { version = "0.5", features = ["multipart"] }
axum-extra = { version = "0.3.7", features = ["spa"] }
ajars_axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
serde_json = "1.0"
askama = "0.10"
regex = "1"
lazy_static = "1.2"
calamine = "0.18"
anyhow = "1.0"
strum = "0.24.0"
strum_macros = "0.24.0"
glob = "0.3.0" 
xlsxwriter = "0.3.5"


