[package]
name = "rustbom"
version = "0.1.0"
edition = "2021"
authors = ["Daniele Basile <asterix24@gmail.com>"]
about = "Pretty merger and formatter Bill Of Materials."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
rand_pcg = "0.3.1"
log = "0.4.17"
env_logger = "0.10.0"
futures = "0.3"
csv = "1.1"
axum = { version = "0.5", features = ["multipart"] }
axum-extra = { version = "0.3.7", features = ["spa"] }
ajars_axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
serde_json = "1.0"
askama = "0.10"
regex = "1"
lazy_static = "1.2"
calamine = "0.18"
anyhow = "1.0"
strum = "0.24.0"
strum_macros = "0.24.0"
glob = "0.3.0" 
xlsxwriter = "0.6.1"

